[gd_scene load_steps=2 format=3 uid="uid://cmxee5ywoanvl"]

[ext_resource type="Script" path="res://src/screens/main/player_list/player_list.gd" id="1_h755l"]

[node name="PlayerList" type="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h755l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Search" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "CERCA"

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Button" parent="VBoxContainer/Options"]
layout_mode = 2
text = "NOME"

[node name="Price" type="Button" parent="VBoxContainer/Options"]
layout_mode = 2
text = "PREZZO"

[node name="Positions" type="OptionButton" parent="VBoxContainer/Options"]
layout_mode = 2

[node name="OnlyAvailableCheckBox" type="CheckBox" parent="VBoxContainer/Options"]
layout_mode = 2
text = "DISP."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[connection signal="text_changed" from="VBoxContainer/Search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="VBoxContainer/Options/Name" to="." method="_on_name_pressed"]
[connection signal="pressed" from="VBoxContainer/Options/Price" to="." method="_on_price_pressed"]
[connection signal="item_selected" from="VBoxContainer/Options/Positions" to="." method="_on_positions_item_selected"]
[connection signal="toggled" from="VBoxContainer/Options/OnlyAvailableCheckBox" to="." method="_on_only_available_check_box_toggled"]
